Fixed linking between pages and mobile horizontal scrolling.

--- a/side.css
+++ b/side.css
@@ -116,7 +116,7 @@ nav .fa {
         display: block;
     }
     .nav-links{
-        position: absolute;
+        position: fixed; /* This fixes the scrollable on the mobile devices*/
         background: #97b4fc;
         height: 100vh;
         width: 200px;
@@ -152,6 +152,11 @@ nav .fa {
     }
     /* cta section */
     .cta h1{
+        font-size: 24px;
+    }
+
+    /*Adding the responsive for the form section*/
+    .sub-header h1{
         font-size: 24px;
     }
 
@@ -404,4 +409,122 @@ h3{
 }
 
 
+/* This section is for the styling of the blog portion of the page */
+
+.blog-content{
+    width: 80%;
+    margin: auto;
+    padding: 60px 0;
+}
+
+.blog-left{
+    flex-basis: 65%;
+}
+.blog-left img{
+    width: 100%;
+}
+.blog-left h2{
+    color: #222;
+    font-weight: 600;
+    margin: 30px 0;
+}
+.blog-left p{
+    padding: 0;
+    color:aqua;
+}
+.blog-right{
+    flex-basis: 32%;
+}
+.blog-right h3{
+    background: orange;
+    color: red;
+    padding: 7px 0;
+    font-size: 16px;
+    margin-bottom: 20px;
+}
+.blog-right div{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    color: greenyellow;
+    padding: 8px;
+    box-sizing: border-box;
+}
+.comment-box{
+    border: 1px solid orange;
+    margin: 50px 0;
+    padding: 10px 20px;
+}
+.comment-box h3{
+    text-align: left;
+}
+.comment-form input, .comment-form textarea{
+    width: 100%;
+    padding: 10px;
+    margin: 15px 0;
+    box-sizing: border-box;
+    border: none;
+    outline: none;
+    background: brown;
+}
+.comment-form button{
+    margin: 10px 0;
+}
+
+
+/* Contact Section of the website */
+
+.location{
+    width: 80%;
+    margin: auto;
+    padding: 80px 0;
+}
+.location h2{
+    background: orange;
+    color: red;
+    padding: 7px 0;
+    font-size: 16px;
+    margin-bottom: 20px;
+    text-align: center;
+}
+.location iframe{
+    width: 100%;
+}
+.contact-us{
+    width: 80%;
+    margin: auto;
+}
+.contact-col{
+    flex-basis: 48%;
+    margin-bottom: 30px;
+}
+.contact-co div{
+    display: flex;
+    align-items: center;
+    margin-bottom: 40px;
+}
+.contact-co div .fa{
+    font-size: 28px;
+    color: brown;
+    margin: 10px;
+    margin-right: 30px;
+}
+.contact-col div {
+    padding: 0;
+}
+.contact-col div h5{
+    font-size: 20px;
+    margin-bottom: 5px;
+    color: green;
+    font-weight: 400;
+}
+
+.contact-col input, .contact-col textarea{
+    width: 100%;
+    padding: 15px;
+    margin-bottom: 17px;
+    border: 1px solid black;
+    outline: none;
+    box-sizing: border-box;
+}
 
